chore: build docker image & use image in backup-test cronjob

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,10 @@ jobs:
             context: .
             dockerfile: schema/Dockerfile
             name: schema
+          - image: ghcr.io/bcgov/cas-cif-test-backups
+            context: .
+            dockerfile: database_backup_test/Dockerfile
+            name: testBackups
     name: Build ${{ matrix.name }} docker image
     steps:
       - uses: actions/checkout@v2
