--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -1,9 +1,11 @@
+{{- $currentNamespace := .Release.Namespace }}
+
 apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: test-database-backups
   labels:
-{{ include "backup-test.labels" . | indent 4 }}
+{{ include "cas-cif.labels" . | indent 4 }}
 spec:
   schedule: "* * * * *"
   jobTemplate:
@@ -13,16 +15,15 @@ spec:
           serviceAccountName: deployer
           containers:
           - name: deploy-test-cluster
-            image: <ourimage>
+            image: {{ .Values.image.backupTest.repository }}:{{ default .Values.defaultImageTag .Values.image.backupTest.tag }}
+            imagePullPolicy: {{ default .Values.defaultImagePullPolicy .Values.image.backupTest.pullPolicy }}
             command:
             - /bin/sh
             - -c
             - |
                 set -euo pipefail;
-                helm install -n {{ cas-cif.namespacePrefix }}-tools backup-test \
-                --set host.namespace={{ Release.Namespace }} \
-                --set host.secret.secretName=gcp-{{ .Release.Namespace }}-cif-backups-service-account-key \
-                --set host.secret.secretKey=credentials.json \
-                && ./check_for_recent_timestamps \
-                && helm uninstall -n {{cas-cif.namespacePrefix}}-tools backup-test
+                helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test \
+                --set host.namespace={{ $currentNamespace }} \
+                --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key \
+                --set host.secret.secretKey=credentials.json;
           restartPolicy: Never
