--- a/chart/cas-cif/values.yaml
+++ b/chart/cas-cif/values.yaml
@@ -15,6 +15,8 @@ image:
   casShelf:
     repository: artifacts.developer.gov.bc.ca/google-docker-remote/ggl-cas-storage/cas-shelf-tfe-add-app
     tag: "0.1"
+  backupTest:
+    repository: ghcr.io/bcgov/cas-cif-test-backups
 
 app:
   sitewide_notice:
