--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -7,16 +7,30 @@ metadata:
   labels:
 {{ include "cas-cif.labels" . | indent 4 }}
 spec:
+  suspend: true # This cron job is intended to be triggered manually
   schedule: "* * * * *"
   jobTemplate:
     spec:
+      backoffLimit: 0
+      activeDeadlineSeconds: 600
       template:
+        metadata:
+          labels: {{ include "cas-cif.labels" . | nindent 14 }}
         spec:
+          activeDeadlineSeconds: 600
+          restartPolicy: Never
           serviceAccountName: deployer
           containers:
           - name: deploy-test-cluster
             image: {{ .Values.image.backupTest.repository }}:{{ default .Values.defaultImageTag .Values.image.backupTest.tag }}
             imagePullPolicy: {{ default .Values.defaultImagePullPolicy .Values.image.backupTest.pullPolicy }}
+            resources:
+              limits:
+                cpu: 500m
+                memory: 128Mi
+              requests:
+                cpu: 100m
+                memory: 64Mi
             command:
             - /bin/sh
             - -c
@@ -26,4 +40,3 @@ spec:
                 --set host.namespace={{ $currentNamespace }} \
                 --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key \
                 --set host.secret.secretKey=credentials.json;
-          restartPolicy: Never
