--- a/database_backup_test/Dockerfile
+++ b/database_backup_test/Dockerfile
@@ -5,3 +5,8 @@ ENV HOME=/root
 WORKDIR ${HOME}
 
 COPY database_backup_test/ ${HOME}/
+
+RUN useradd -ms /bin/bash -d ${HOME} --uid ${USER_ID} helm_user
+RUN chown -R helm_user:0 ${HOME} && chmod -R g+rwX ${HOME}
+
+USER ${USER_ID}
