chore: debugging dockerfile

--- a/database_backup_test/Dockerfile
+++ b/database_backup_test/Dockerfile
@@ -1,11 +1,10 @@
-FROM debian:11
+FROM alpine/k8s:1.23.14
 ENV USER_ID=1001
 ENV HOME=/root
-
 WORKDIR ${HOME}
-
 COPY database_backup_test/ ${HOME}/
 
+FROM debian:11
 RUN useradd -ms /bin/bash -d ${HOME} --uid ${USER_ID} helm_user
 RUN chown -R helm_user:0 ${HOME} && chmod -R g+rwX ${HOME}
 
