chore: debugging dockerfile

--- a/database_backup_test/Dockerfile
+++ b/database_backup_test/Dockerfile
@@ -5,7 +5,7 @@ ENV HOME=/root
 WORKDIR ${HOME}
 COPY database_backup_test/ ${HOME}/
 
-RUN adduser --shell /bin/bash --home ${HOME} --uid ${USER_ID} helm_user
+RUN adduser --shell /bin/bash --home ${HOME} --uid ${USER_ID} --disabled-password helm_user
 RUN chown -R helm_user:0 ${HOME} && chmod -R g+rwX ${HOME}
 
 USER ${USER_ID}
