chore: use alpine/helm image

--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -36,7 +36,7 @@ spec:
             - -c
             - |
                 set -euo pipefail;
-                helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test \
+                helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test . \
                 --set host.namespace={{ $currentNamespace }} \
                 --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key \
                 --set host.secret.secretKey=credentials.json;
