--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -24,6 +24,12 @@ spec:
           - name: deploy-test-cluster
             image: {{ .Values.image.backupTest.repository }}:{{ default .Values.defaultImageTag .Values.image.backupTest.tag }}
             imagePullPolicy: {{ default .Values.defaultImagePullPolicy .Values.image.backupTest.pullPolicy }}
+            env:
+              - name: GCP_CREDENTIALS
+                valueFrom:
+                  secretKeyRef:
+                    name: gcp-{{ .Release.Namespace }}-cif-documents-service-account-key
+                    key: credentials.json
             resources:
               limits:
                 cpu: 500m
@@ -39,4 +45,5 @@ spec:
                 helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test . \
                 --set host.namespace={{ $currentNamespace }} \
                 --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key \
-                --set host.secret.secretKey=credentials.json;
+                --set host.secret.secretKey=credentials.json \
+                --set host.secret.credentials=$(CLOUDSQL_INSTANCE);
