chore: do not use lookup, use passed value

--- a/database_backup_test/backup-test/templates/secret.yaml
+++ b/database_backup_test/backup-test/templates/secret.yaml
@@ -1,11 +1,3 @@
-{{- $hostSecret := (lookup "v1" "Secret" .Values.host.namespace .Values.host.secret.secretName ) }}
-{{- $credentialSecret := "null" }}
-{{- if $hostSecret }}
-{{- $credentialSecret = index $hostSecret.data .Values.host.secret.secretKey}}
-{{- else }}
-{{- print "WARNING credentialSecret does not exist, connection to backups fail" }}
-{{- end -}}
-
 apiVersion: v1
 kind: Secret
 metadata:
@@ -15,4 +7,4 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
 type: Opaque
 data:
-  credentials: {{ $credentialSecret }}
+  credentials: {{ .Values.host.secret.credentials | quote }}
