chore: fix copy-paste error

--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -46,4 +46,4 @@ spec:
                 --set host.namespace={{ $currentNamespace }} \
                 --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key \
                 --set host.secret.secretKey=credentials.json \
-                --set host.secret.credentials=$(CLOUDSQL_INSTANCE);
+                --set host.secret.credentials="$(GCP_CREDENTIALS)";
