chore: b64enc secret data

--- a/database_backup_test/backup-test/templates/secret.yaml
+++ b/database_backup_test/backup-test/templates/secret.yaml
@@ -7,4 +7,4 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
 type: Opaque
 data:
-  credentials: {{ .Values.host.secret.credentials | quote }}
+  credentials: {{ .Values.host.secret.credentials | b64enc | quote }}
