--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -30,6 +30,8 @@ spec:
                   secretKeyRef:
                     name: gcp-{{ .Release.Namespace }}-cif-documents-service-account-key
                     key: credentials.json
+              - name: CRED
+                value: '"$(GCP_CREDENTIALS)"'
             resources:
               limits:
                 cpu: 500m
@@ -42,8 +44,5 @@ spec:
             - -c
             - |
                 set -euo pipefail;
-                helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test . \
-                --set host.namespace={{ $currentNamespace }} \
-                --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key \
-                --set host.secret.secretKey=credentials.json \
-                --set host.secret.credentials="$(GCP_CREDENTIALS)";
+                BASECRED=`echo $(CRED) | base64 -w 0`;
+                helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test . --set host.namespace={{ $currentNamespace }} --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key --set host.secret.secretKey=credentials.json --set host.secret.credentials='"$(BASECRED)"' | base64;
