--- a/database_backup_test/backup-test/templates/secret.yaml
+++ b/database_backup_test/backup-test/templates/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gcs-credentials
+  name: gcp-{{ .Values.host.namespace }}-cif-backups-service-account-key
   labels: {{ include "backup-test.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
 type: Opaque
 data:
-  credentials: {{ .Values.host.secret.credentials | b64enc | quote }}
+  credentials: {{ .Values.host.secret.credentials | b64dec | quote }}
