--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -1,4 +1,10 @@
-{{- $currentNamespace := .Release.Namespace }}
+{{- $backupNamespace := printf "%s%s" (include "cas-cif.namespacePrefix" .) "-tools"}}
+{{- $backupHost := printf "%s%s%s" "backup-test-postgres-primary." $backupNamespace ".svc.cluster.local"}}
+{{- $secret := (lookup "v1" "Secret" $backupNamespace "backup-test-postgres-pguser-postgres" ) }}
+{{- $pgPassword := "unfetched password" }}
+{{- if $secret }}
+{{- $pgPassword = index $secret.data "password" }}
+{{- end -}}
 
 apiVersion: batch/v1
 kind: CronJob
@@ -21,9 +27,19 @@ spec:
           restartPolicy: Never
           serviceAccountName: deployer
           containers:
-          - name: deploy-test-cluster
-            image: {{ .Values.image.backupTest.repository }}:{{ default .Values.defaultImageTag .Values.image.backupTest.tag }}
+          - name: test-database-backups
+            image: postgres:14.6-alpine
             imagePullPolicy: {{ default .Values.defaultImagePullPolicy .Values.image.backupTest.pullPolicy }}
+            env:
+              - name: CIF_BACKUP_DATABASE
+                valueFrom:
+                  secretKeyRef:
+                    key: cas-cif-postgres-pguser-postgres
+                    name: dbname
+              - name: CIF_BACKUP_HOST
+                value: {{ $backupHost }}
+              - name: CIF_BACKUP_PASS
+                value: {{ $pgPassword }}
             resources:
               limits:
                 cpu: 800m
@@ -36,4 +52,14 @@ spec:
             - -c
             - |
                 set -euo pipefail;
-                helm install -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test ./backup-test --set host.namespace={{ $currentNamespace }} --set host.secret.secretName=gcp-{{ $currentNamespace }}-cif-backups-service-account-key --set host.secret.secretKey=credentials.json;
+                declare -i VALUE;
+                export PGPASSWORD="$(CIF_BACKUP_PASS)";
+                VALUE=$(psql -U postgres -h "$(CIF_BACKUP_HOST)" -qtAX -d $(CIF_BACKUP_DATABASE) -c "select count(*) from cif_private.full_backup_log where full_backup_timestamp > now() - interval '1 day'");
+                if [[ $VALUE -lt 1 ]] ; then
+                  echo 'no timestamp found'
+                  exit 1
+                else
+                  echo 'timestamp found, backup ok...uninstalling test cluster';
+                  helm uninstall -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test;
+                  exit 0;
+                fi;
