--- a/app/.env.example
+++ b/app/.env.example
@@ -17,3 +17,7 @@ SHOW_KC_LOGIN=<true or false>
 # These variables allow mocking times and authentication during e2e testing
 ENABLE_MOCK_TIME=<true or false>
 ENABLE_MOCK_AUTH=<true or false>
+
+# These variables are for setting the CIF program director name and email
+REACT_APP_PROGRAM_DIRECTOR_NAME=
+REACT_APP_PROGRAM_DIRECTOR_EMAIL=
