--- a/chart/cas-cif/values-test.yaml
+++ b/chart/cas-cif/values-test.yaml
@@ -5,7 +5,8 @@ app:
 hostName: test.cif.gov.bc.ca
 
 db:
-  preUpgradeCommand: |
+  postUpgrade: true
+  upgradeCommand: |
     psql -v "ON_ERROR_STOP=1" <<EOF
       drop schema if exists sqitch cascade;
       drop schema if exists cif cascade;
