--- a/chart/cas-cif/values-test.yaml
+++ b/chart/cas-cif/values-test.yaml
@@ -11,7 +11,12 @@ db:
       drop schema if exists sqitch cascade;
       drop schema if exists cif cascade;
       drop schema if exists cif_private cascade;
-    EOF
+    EOF;
+    sqitch deploy;
+    ./data/deploy-data.sh;
+    for file in data/dev/*.sql; do
+      psql -v "ON_ERROR_STOP=1" -d cif -f "${file}";
+    done;
 
 deploy-db:
   airflowEndpoint: https://cas-airflow-test.apps.silver.devops.gov.bc.ca
