--- a/app/package.json
+++ b/app/package.json
@@ -136,6 +136,7 @@
     "**/jsonpointer": "5.0.0",
     "cypress/@cypress/request/http-signature/jsprim/json-schema": "0.4.0",
     "next/node-fetch": "2.6.7",
-    "**/jsonwebtoken": "9.0.0"
+    "**/jsonwebtoken": "9.0.0",
+    "**/json5": "2.2.2"
   }
 }
