chore: use getConfig instead of process env for director details

--- a/app/.env.example
+++ b/app/.env.example
@@ -19,5 +19,5 @@ ENABLE_MOCK_TIME=<true or false>
 ENABLE_MOCK_AUTH=<true or false>
 
 # These variables are for setting the CIF program director name and email
-NEXT_PUBLIC_PROGRAM_DIRECTOR_NAME=
-NEXT_PUBLIC_PROGRAM_DIRECTOR_EMAIL=
+PROGRAM_DIRECTOR_NAME=
+PROGRAM_DIRECTOR_EMAIL=
