chore: add director ENV variables to github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,8 @@ on:
 
 env:
   PGUSER: postgres
+  PROGRAM_DIRECTOR_NAME: director name
+  PROGRAM_DIRECTOR_EMAIL: director@email.com
 
 jobs:
   install-dev-tools:
