--- a/database_backup_test/backup-test/templates/postgres.yaml
+++ b/database_backup_test/backup-test/templates/postgres.yaml
@@ -86,8 +86,7 @@ spec:
         enabled: true
         repoName: repo1
         options:
-        - --type=time
-        - --target={{ now | date_modify "-1h" | date "2006-01-02 15:04:05.000000" | quote }}
+        - --type=immediate
         - --archive-mode=off
     {{- end }}
       configuration:
