chore: make project_next_milestone_due_date sortable in postgraphile

--- a/app/postgraphile.tags.json5
+++ b/app/postgraphile.tags.json5
@@ -140,6 +140,11 @@
           filterable: true,
         },
       },
+      "cif.project_next_milestone_due_date": {
+        tags: {
+          sortable: true,
+        },
+      },
     },
   },
 }
