--- a/chart/cas-cif/templates/postgres.yaml
+++ b/chart/cas-cif/templates/postgres.yaml
@@ -83,6 +83,7 @@ spec:
         - cif
   backups:
     pgbackrest:
+      image: artifacts.developer.gov.bc.ca/bcgov-docker-local/crunchy-pgbackrest:centos8-2.36-0
     {{- if .Values.db.restore.enabled }}
       restore:
         enabled: true
