chore: remove unnecessary directory from uninstall command

--- a/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
+++ b/chart/cas-cif/templates/cronJobs/test-database-backups.yaml
@@ -69,4 +69,4 @@ spec:
             - -c
             - |
                 set -euo pipefail;
-                helm uninstall -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test ./backup-test;
+                helm uninstall -n {{ include "cas-cif.namespacePrefix" . }}-tools backup-test;
