chore: switch projectStatusId to use search widget

--- a/schema/data/prod/json_schema/project.json
+++ b/schema/data/prod/json_schema/project.json
@@ -52,7 +52,8 @@
       "projectStatusId": {
         "type": "number",
         "title": "Project Status",
-        "default": "undefined"
+        "default": "undefined",
+        "anyOf": "undefined"
       },
       "sectorName": {
         "type": "string",
