--- a/database_backup_test/backup-test-init/values.yaml
+++ b/database_backup_test/backup-test-init/values.yaml
@@ -1,3 +1,10 @@
 # Default values for backup-test-init.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+
+host:
+  namespace: ~
+  BoundServiceAccountName: ~
+  secret:
+    secretName: ~
+    secretKey: ~
