chore: add database secrets and renaming tweaks

--- a/database_backup_test/backup-test-init/values.yaml
+++ b/database_backup_test/backup-test-init/values.yaml
@@ -6,5 +6,7 @@ host:
   namespace: ~
   BoundServiceAccountName: ~
   secret:
-    secretName: ~
-    secretKey: ~
+    gcsSecretName: ~
+    gcsSecretKey: ~
+    dbSecretName: ~
+    dbSecretKey: ~
