--- a/schema/data/prod/json_schema/project_summary_report.json
+++ b/schema/data/prod/json_schema/project_summary_report.json
@@ -2,13 +2,27 @@
   "schema": {
     "$schema": "http://json-schema.org/draft-07/schema",
     "type": "object",
-    "title": "Upon Completion",
+    "title": "Project Summary Report",
     "required": [
+      "reportDueDate",
       "projectSummaryReportPayment",
-      "paymentNotes",
       "dateSentToCsnr"
     ],
     "properties": {
+      "reportDueDate": {
+        "type": "string",
+        "title": "Report Due Date",
+        "default": "undefined"
+      },
+      "submittedDate": {
+        "type": "string",
+        "title": "Received Date",
+        "default": "undefined"
+      },
+      "comments": {
+        "type": "string",
+        "title": "General Comments"
+      },
       "projectSummaryReportPayment": {
         "title": "Project Summary Report Payment",
         "type": "number"
