--- a/chart/cas-cif/templates/backup-test-secret.yaml
+++ b/chart/cas-cif/templates/backup-test-secret.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "cas-cif.fullname" . }}-defined-backup-password
-  labels: {{ include "backup-test-init.labels" . | nindent 4 }}
+  labels: {{ include "cas-cif.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
 data:
   password: {{ $databasePassword }}
