--- a/database_backup_test/backup-test/templates/wait_for_cluster_restore.yaml
+++ b/database_backup_test/backup-test/templates/wait_for_cluster_restore.yaml
@@ -50,7 +50,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 key: password
-                name: defined-backup-password
+                name: cas-cif-defined-backup-password
         command:
         - /bin/sh
         - -c
