chore: add b64enc to randomly generated secret

--- a/chart/cas-cif/templates/backup-test-secret.yaml
+++ b/chart/cas-cif/templates/backup-test-secret.yaml
@@ -1,4 +1,4 @@
-{{- $databasePassword := (randAlphaNum 32) }}
+{{- $databasePassword := (randAlphaNum 32) | b64enc | quote }}
 
 apiVersion: v1
 kind: Secret
