chore: persist secret if exists

--- a/chart/cas-cif/templates/backup-test-secret.yaml
+++ b/chart/cas-cif/templates/backup-test-secret.yaml
@@ -1,9 +1,14 @@
 {{- $databasePassword := (randAlphaNum 32) | b64enc | quote }}
+{{- $secretName := print (print (include "cas-cif.fullname" .)) "-defined-backup-password" }}
+{{- $secret := (lookup "v1" "Secret" .Release.Namespace $secretName ) }}
+{{- if $secret }}
+{{- $databasePassword = index $secret.data "password" }}
+{{- end -}}
 
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "cas-cif.fullname" . }}-defined-backup-password
+  name: {{ $secretName }}
   labels: {{ include "cas-cif.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
 data:
