--- a/app/package.json
+++ b/app/package.json
@@ -43,7 +43,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-relay": "13.2.0",
     "babel-plugin-styled-components": "^1.13.3",
-    "cypress": "^8.7.0",
+    "cypress": "12.6.0",
     "cypress-axe": "^0.13.0",
     "cypress-file-upload": "^5.0.8",
     "easygraphql-tester": "^6.0.1",
