chore: exclude cypress config to prevent jest and cypress conflict

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -20,6 +20,12 @@
     "downlevelIteration": true,
     "incremental": true
   },
-  "exclude": [".next", "node_modules", "public", "cypress"],
+  "exclude": [
+    ".next",
+    "node_modules",
+    "public",
+    "cypress",
+    "./cypress.config.ts"
+  ],
   "include": ["./**/*", "./.eslintrc.js"]
 }
