--- a/schema/data/prod/json_schema/project_summary_report.json
+++ b/schema/data/prod/json_schema/project_summary_report.json
@@ -3,21 +3,15 @@
     "$schema": "http://json-schema.org/draft-07/schema",
     "type": "object",
     "title": "Project Summary Report",
-    "required": [
-      "reportDueDate",
-      "projectSummaryReportPayment",
-      "dateSentToCsnr"
-    ],
+    "required": ["reportDueDate"],
     "properties": {
       "reportDueDate": {
         "type": "string",
-        "title": "Report Due Date",
-        "default": "undefined"
+        "title": "Report Due Date"
       },
       "submittedDate": {
         "type": "string",
-        "title": "Received Date",
-        "default": "undefined"
+        "title": "Received Date"
       },
       "comments": {
         "type": "string",
@@ -33,8 +27,7 @@
       },
       "dateSentToCsnr": {
         "title": "Date Invoice Sent to CSNR",
-        "type": "string",
-        "default": "undefined"
+        "type": "string"
       }
     }
   }
