chore: update project contact db schema

--- a/schema/data/prod/json_schema/project_contact.json
+++ b/schema/data/prod/json_schema/project_contact.json
@@ -6,9 +6,7 @@
     "properties": {
       "contactId": {
         "title": "Contact",
-        "type": "number",
-        "default": "undefined",
-        "anyOf": "undefined"
+        "type": "number"
       }
     }
   }
