chore: remove need for manually created secret

--- a/chart/cas-cif/templates/backup-test-secret.yaml
+++ b/chart/cas-cif/templates/backup-test-secret.yaml
@@ -8,9 +8,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $secretName }}
+  name: {{ .Release.Name }}-defined-backup-password
   labels: {{ include "cas-cif.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
 data:
   password: {{ $databasePassword }}
+  host: backup-test-postgres-primary.{{ template "cas-cif.namespacePrefix" . }}-tools.svc.cluster.local
 type: Opaque
