chore: use stringData key for string secret

--- a/chart/cas-cif/templates/backup-test-secret.yaml
+++ b/chart/cas-cif/templates/backup-test-secret.yaml
@@ -13,5 +13,6 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
   password: {{ $databasePassword }}
+stringData:
   host: backup-test-postgres-primary.{{ template "cas-cif.namespacePrefix" . }}-tools.svc.cluster.local
 type: Opaque
