chore: use main bcgov certbot

--- a/chart/cas-cif/Chart.yaml
+++ b/chart/cas-cif/Chart.yaml
@@ -16,7 +16,5 @@ dependencies:
     alias: deploy-db
     condition: deploy-db.enabled
   - name: certbot
-    version: 0.1.1
-    # temporarily using forked helm repo to test a fix.
-    # Sould be updated once the upstream repo is updated.
-    repository: https://matthieu-foucault.github.io/certbot
+    version: 0.1.3
+    repository: https://bcdevops.github.io/certbot
