--- a/schema/data/prod/json_schema/project_manager.json
+++ b/schema/data/prod/json_schema/project_manager.json
@@ -6,9 +6,7 @@
     "properties": {
       "cifUserId": {
         "type": "number",
-        "title": "Project Manager",
-        "default": "undefined",
-        "anyOf": "undefined"
+        "title": "Project Manager"
       }
     }
   }
